# geoinformatica

./: Doxyfile  Makefile  README  gui.pl  index.dox
Geo-OGC-Geometry/: ChangeLog  MANIFEST  META.yml  Makefile.PL  README
Geo-OGC-Geometry/lib/Geo/OGC/: Geometry.pm
Geo-OGC-Geometry/tags/release-0.04/t/: 00.t
Geo-OGC-Geometry/trunk/: MANIFEST  README
Geo-OGC-Geometry/trunk/t/: 01.t
Geo-OGC-SymbologyEncoding/: Changes  Makefile.PL  README
Geo-OGC-SymbologyEncoding/lib/Geo/OGC/: SymbologyEncoding.pm
Geo-OGC-SymbologyEncoding/t/: Geo-OGC-SymbologyEncoding.t  test.xml
Geo-OGC-SymbologyEncoding/trunk/: Makefile.PL
Geo-Raster/: ChangeLog  MANIFEST  META.yml  Makefile.PL  gr.dox  index.dox  rash  ta.dox
Geo-Raster/lib/Geo/: Raster.pm  Raster.xs  help.c
Geo-Raster/lib/Geo/Raster/: IO.pm  Image.pm  Layer.pm  MultiBandLayer.pm
Geo-Raster/t/: 00_basic.t  Raster.t
Geo-Raster/t/Geo/Raster/: BasicTests.pm  OperatorTests.pm
Geo-Raster/tags/release-0.62/: Doxyfile  META.yml  ta.dox
Geo-Raster/tags/release-0.62/t/: 05_hydrology.t
Geo-Raster/trunk/: ChangeLog  Doxyfile  MANIFEST  Makefile.PL  README  TODO  index.dox  ta.dox
Geo-Raster/trunk/lib/Geo/: Raster.pm  Raster.xs  help.c
Geo-Raster/trunk/t/: 00_basic.t  04_algorithms.t  05_hydrology.t  06_focal.t  09_layer.t
Geo-Vector/: META.yml  Makefile.PL  index.dox
Geo-Vector/lib/Geo/: Vector.pm  Vector.xs
Geo-Vector/lib/Geo/Vector/: Layer.pm
Geo-Vector/t/: 00.t
Geo-Vector/tags/release-0.52/t/: 03_layer.t
Geo-Vector/trunk/: MANIFEST  Makefile.PL  README  TODO
Geo-Vector/trunk/lib/Geo/: Vector.pm  Vector.xs  help.c
Geo-Vector/trunk/t/: 00.t  02_layer.t  03_layer.t
Geoinformatica/trunk/: ChangeLog  G-shell.bat  Geoinformatica.iss  README  WXS.pm  dist.pl  ext.pm  files.pl  gui.pl  snapshots.sh  wfs.conf  wfs.pl  wms.conf  wms.pl  wps.conf  wps.pl
Geoinformatica/trunk/doc/: Geo-Vector_dialogs.odt
Gtk2-Ex-Geo/: MANIFEST  META.yml  Makefile.PL  README
Gtk2-Ex-Geo-Graph/: Files.pm  META.yml  Makefile.PL
Gtk2-Ex-Geo-Graph/t/: 00.t
Gtk2-Ex-Geo-Graph/trunk/: Files.pm  Makefile.PL
Gtk2-Ex-Geo-Graph/trunk/t/: 00.t
Gtk2-Ex-Geo/branches/janne/: Makefile.PL  README
Gtk2-Ex-Geo/lib/Gtk2/Ex/: Geo.pm
Gtk2-Ex-Geo/t/: 02.t
Gtk2-Ex-Geo/tags/release-0.62/: MANIFEST
Gtk2-Ex-Geo/tags/release-0.62/t/: 01.t
Gtk2-Ex-Geo/trunk/: ChangeLog  MANIFEST  Makefile.PL
Gtk2-Ex-Geo/trunk/t/: 02.t
IPC-Gnuplot/: MANIFEST  Makefile.PL
IPC-Gnuplot/lib/IPC/: Gnuplot.pm
IPC-Gnuplot/trunk/: MANIFEST  README
IPC-Gnuplot/trunk/lib/IPC/: Gnuplot.pm
IPC-Gnuplot/trunk/t/: Gnuplot.t
doc/: Geo-Vector_dialogs.odt
gvl/: Doxyfile
gvl/trunk/: gvl.c  gvl_private.h  test.c
libral/: AUTHORS  Makefile.MinGW  Makefile.VC71  Makefile.am  README  autogen.sh  configure.ac  ral.h  ral_catchment.c  ral_grid.c  ral_grid_rw.c  ral_hash.c  ral_pixbuf.c  ral_statistics.c  ral_vd.c  ral_visual.c  test.c
libral/ral/: backend.h  config.h.in  dem.h  grid.h  hash.h  statistics.h  vector.h  visual.h
libral/tags/release-0.62/: interface.c  libral.pc  ral_grid.c  ral_grid_rw.c
libral/tags/release-0.62/ral/: config.h  dem.h  vector.h
libral/trunk/: ChangeLog  Doxyfile  Makefile.MinGW  Makefile.am  NEWS  README  TODO  config.h  config.h.in  configure.ac  index.dox  libral.pc  msg.h  ral_catchment.c  ral_grid.c  ral_grid_rw.c  ral_pixbuf.c  ral_visual.c  test.c
libral/trunk/ral/: config.h  dem.h  grid.h  visual.h
services/: Scale.pm  WXS.pm  WxS.pm  wfs.conf  wfs.pl  wms.conf  wms.pl  wmts.pl  wps.pl
tags/2010-11-10/Geo-OGC-SymbologyEncoding/trunk/: MANIFEST
tags/2010-11-10/Geo-Raster/trunk/: Makefile.PL
tags/2010-11-10/Geo-Vector/trunk/: MANIFEST
tags/2010-11-10/Geoinformatica/trunk/: README  ext.glade  ext.pm  files.pl  gui.pl
tags/2010-11-10/Gtk2-Ex-Geo-Graph/trunk/: Files.pm  MANIFEST
tags/2010-11-10/Gtk2-Ex-Geo/trunk/: MANIFEST  Makefile.PL
tags/2010-11-10/IPC-Gnuplot/trunk/: Changes  Makefile.PL
tags/2010-11-10/gvl/trunk/: Makefile  gvl.h
win/: G-shell.bat  base.iss  dist.pl  modules.pl
(+158 files in other folders)
